tests/fixtures/valid/advanced/operators/power_int_float.py
# Test Int ** Float operations
print(2 ** 2.5)
print(4 ** 0.5)
print(10 ** -1.0)
print(100 ** 0.5)
print(8 ** (1.0 / 3.0))
