tests/fixtures/invalid/pow_list_int_float.py
# Cannot call pow() with List[int], Int, Float
x = pow([1, 2, 3], 1, 1.0)
